; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_video.c_find_sub_source_by_name.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_video.c_find_sub_source_by_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"sub-source\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"%s not enabled\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @find_sub_source_by_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_sub_source_by_name(i32* %0, i8* noalias %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32* @GetVout(i32* %9, i32 0)
  store i32* %10, i32** %6, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %35

14:                                               ; preds = %2
  %15 = load i32*, i32** %6, align 8
  %16 = call i8* @var_GetString(i32* %15, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i8* %16, i8** %7, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %24, label %19

19:                                               ; preds = %14
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @libvlc_printerr(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* %20)
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @vout_Release(i32* %22)
  store i32 0, i32* %3, align 4
  br label %35

24:                                               ; preds = %14
  %25 = load i8*, i8** %7, align 8
  %26 = load i8*, i8** %5, align 8
  %27 = call i8* @strstr(i8* %25, i8* %26)
  store i8* %27, i8** %8, align 8
  %28 = load i8*, i8** %7, align 8
  %29 = call i32 @free(i8* %28)
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @vout_Release(i32* %30)
  %32 = load i8*, i8** %8, align 8
  %33 = icmp ne i8* %32, null
  %34 = zext i1 %33 to i32
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %24, %19, %13
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32* @GetVout(i32*, i32) #1

declare dso_local i8* @var_GetString(i32*, i8*) #1

declare dso_local i32 @libvlc_printerr(i8*, i8*) #1

declare dso_local i32 @vout_Release(i32*) #1

declare dso_local i8* @strstr(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
